--- a/style.css
+++ b/style.css
@@ -30,6 +30,17 @@ body {
   left: 0;
   width: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
+  transform: translateX(-100vh);
+}
+
+.overlay-slide-right {
+  transition: all 0.4s ease-in-out;
+  transform: translateX(0);
+}
+
+.overlay-slide-left {
+  transition: all 0.8s ease-in-out;
+  transform: translateX(-100vh);
 }
 
 /* Nav Menu Items */
