--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@ body {
   z-index: 9;
   top: 0;
   left: 0;
-  width: 100vh;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
-  transform: translateX(-100vh);
+  transform: translateX(-100vw);
 }
 
 .overlay-slide-right {
@@ -40,7 +41,7 @@ body {
 
 .overlay-slide-left {
   transition: all 0.8s ease-in-out;
-  transform: translateX(-100vh);
+  transform: translateX(-100vw);
 }
 
 /* Nav Menu Items */
@@ -53,8 +54,8 @@ nav ul{
 
 nav ul {
   display: flex;
-  justify-content: stretch;
   flex-direction: column;
+  justify-content: stretch;
   list-style: none;
 }
 
